refactor(job => task): rename `job` to `task`
